# evm-smart-contract

./: .gitignore  README.md  deployed_address.json  example.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json  withdraw.ts
medoo_course_nft/: Cargo.toml  README.md  dfx.json  medoo_course_nft_backend.did
medoo_course_nft/src/medoo_course_nft_backend/: Cargo.toml  medoo_course_nft_backend.did
medoo_course_nft/src/medoo_course_nft_backend/src/: lib.rs
medoo_syllabus_nft/: Cargo.toml  README.md  dfx.json
medoo_syllabus_nft/src/medoo_syllabus_nft_backend/: Cargo.toml
medoo_syllabus_nft/src/medoo_syllabus_nft_backend/src/: http.rs  lib.rs
scripts/: deploy-vault-deposit.ts  deploy-vault-withdraw.ts  setup.ts
scripts/token/: deployToken.ts
tests/: test-vault-deposit.ts  test-vault-withdraw.ts
tests/support/: ledger.ts
vault-deposit/: Cargo.toml  README.md  canister_ids.json  dfx.json
vault-deposit/src/vault-deposit-backend/: Cargo.toml  vault-deposit-backend.did
vault-deposit/src/vault-deposit-backend/src/: lib.rs
vault-withdraw/: Cargo.toml  README.md  canister_ids.json  dfx.json
vault-withdraw/src/vault-withdraw-backend/: Cargo.toml  vault-withdraw-backend.did
vault-withdraw/src/vault-withdraw-backend/src/: lib.rs
