[package]
name = "medoo_syllabus_nft_backend"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
binary_macros = "1.0.0"
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-certified-map = "0.4.0"
include-base64 = "0.1.0"
percent-encoding = "2.3.1"
serde = "1.0.214"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
