[package]
name = "vault-withdraw-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-timers = "0.8" # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.11"
ic-cdk-macros = "0.14"
icrc-ledger-types = "0.1.5"
serde = "1.0"
